2008-09-18  Lawrence Mitchell  <wence@gmx.li>

	* gnuplot-mode.el (gnuplot-buffer, gnuplot-start-process)
	(gnuplot-setup-comint-variables, gnuplot-get-process)
	(gnuplot-mode, gnuplot-basic-indent, gnuplot-indent-line): Add
	docstrings.
	(%gnuplot-setwd, %gnuplot-send-string)
	(gnuplot-send-region-to-gnuplot, gnuplot-plot-file): New
	functions.
	(%gnuplot-options-regexp, %gnuplot-modifiers-regexp): New
	variables.
	(gnuplot-mode-font-lock-keywords): Use them.
	(gnuplot-basic-indent, gnuplot-mode-map): New variables.

2008-09-17  Lawrence Mitchell  <wence@gmx.li>

	* lisppaste.el (lisppaste-send-command): Bind xml-entity-alist to
	nil to stop encoding of identities.
	(lisppaste-display-paste): Minor indentation fixes.
	* gnuplot-mode.el: New file.

2008-07-25  Lawrence Mitchell  <wence@gmx.li>

	* compose.el (compose-clean-message): Fix docstring in FLET-SIMPLE.
	(compose-send-and-exit): Don't delete newline separator between
	headers and body.

2008-01-17  Lawrence Mitchell  <wence@gmx.li>

	* ogg-comment.el: New file.  Read Ogg-Vorbis file headers.

	* llm-reftex-fns.el: New file.  Finding hardcopies of papers from
	reftex citations.

	* compose.el: New file.  Composition mode for mutt mail messages.

2008-01-15  Lawrence Mitchell  <wence@gmx.li>

	* css-mode.el: Remove file.

	* google.el: Whitespace cleanup.

	* a2r.el (roman<->arabic): New variable.
	(arabic-to-roman): Removed.
	(arabic-to-roman): Fix caller.

	* cite.el (cite-remove-trailing-lines): Default to t.
	(cite-make-attribution-function): Replace #' with '.
	(cite-simple-attribution): Only add one new line after
	attribution.
	(cite-reinsert-sig): Make markers follow signature reinsertion
	correctly.
	(cite-cite-region, cite-uncite-region): Add fourth argument.
	Third argument now tells us the depth of citing.
	(cite-unquote-region): New function.

	* bibtex-massage.el: New file.

2008-01-14  Lawrence Mitchell  <wence@gmx.li>

	* lisppaste.el: Update copyright notice.  Add Package-Requires